[french] [FR] in progrès

--- a/en-GB.lproj/Localizable.strings
+++ b/en-GB.lproj/Localizable.strings
@@ -7,17 +7,17 @@
 */
 
 "Bundled Resources version missing." = "Bundled Resources version missing."
-"Unsupported" = "Unsupported"
-"Restore RootFS" = "Restore RootFS"
-"Ready to restore RootFS" = "Ready to restore RootFS"
+"Unsupported" = "Non pris en charge"
+"Restore RootFS" = "Restaurer RootFS"
+"Ready to restore RootFS" = "Prêt pour restaurer RootFS"
 "Re-Jailbreak" = "Re-Jailbreak"
-"Ready to re-jailbreak" = "Ready to re-jailbreak"
+"Ready to re-jailbreak" = "Prêt pour re-jailbreak"
 "Jailbreak" = "Jailbreak"
-"Ready to jailbreak" = "Ready to jailbreak"
-"Error" = "Error"
+"Ready to jailbreak" = "Prêt pour jailbreak"
+"Error" = "Erreur"
 "Bundled Resources version is missing. This build is invalid." = "Bundled Resources version is missing. This build is invalid."
-"Days" = "Days"
-"Invalid Entry" = "Invalid Entry"
+"Days" = "Jour(s)"
+"Invalid Entry" = "Entrée Invalide"
 "The boot nonce entered could not be parsed" = "The boot nonce entered could not be parsed"
 "OK" = "OK"
 "The device will be restarted." = "The device will be restarted."
